Combined Index & Index2 and main.css & mainstyle.css. so we use Index and main.css now. Fixed the alignment of main navigation and footer. fixed the blank space on the top (finally!) Also combined our name tags! please check! :)

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -5,24 +5,17 @@
 	
 .main-nav{
 	width:86%;
-	float:left;
-	margin-left:8%;
+	margin: 1em auto;
+	text-align: center;
+
 	
 }
-#cart-button{
-	
-	width:55px;
-	height:55px;
-	background:grey;
-	margin-bottom:2%;
-	float:right;
-	
-}
+
 .nav-button{
 	text-decoration:none;
-	float:left;
+	display: inline-block;
 	text-align:center;
-	width:14%;
+	width:15%;
 	color:#bdb3a9;
 
 	
@@ -30,6 +23,17 @@
 }
 .nav-button:hover{
 	color:#F8BEA2;
+	cursor:pointer;
+	
+}
+
+#cart-button{
+	
+	width:55px;
+	height:40px;
+	background:grey;
+
+	float:right;
 	
 }
 
@@ -70,8 +74,8 @@
 	overflow:hidden;
 	display:none;
 	-webkit-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
--moz-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
+	box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 }
 
 #sign-up-page{
@@ -84,8 +88,8 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	overflow:hidden;
 	display:none;
 	-webkit-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
--moz-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
+	box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 }
 
 
@@ -95,6 +99,7 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	height:70%;
 }
 #log-in-pop-up-close{
+	text-align: center;
 	background:#EDEDED;
 	width:100%;
 	height:12%;
@@ -104,8 +109,10 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	background:#EDEDED;
 	width:100%;
 	height:85%;
+
 }
 #sign-up-pop-up-close{
+	text-align: center;
 	background:#EDEDED;
 	width:100%;
 	height:10%;
@@ -114,7 +121,7 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 
 
 
-.main-image{
+.main-image {
 	
 	width:100%;
 	height:300px;
@@ -123,7 +130,7 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	margin-bottom:10px;
 }
 
-.category{
+.category img {
 	width:23%;
 	height:200px;
 	background-color:#CCC;
@@ -134,36 +141,36 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	
 }
 
-.event{
+.event {
 	width:100%;
-	height:200px;
-	float:left;
+	height:300px;
 	background:#CCC;
-	border:grey solid thin;
+	
 	
 	
 }
 
-.footer{
+.footer {
 	width:100%;
 	height:150px;
-	float:left;
+	text-align: center;
 	margin-top:20px;
 	background:#F8BEA2;
 		
 }
 #footer-content{
 	width:15%;
-	float:left;
+	padding-top: 60px;
+	display: inline-block;
 	
 }
 .social-media{
 	width:30px;
 	height:30px;
-	background:grey;
+	background: #CCC;
 	margin-left:10px;
 	margin-right:20px;
-	margin-top:10px;
+	margin-top:60px;
 	float:right;
 	
 	
