--- a/css/phone.css
+++ b/css/phone.css
@@ -6,33 +6,43 @@
 	
 .main-nav{
 	width:100%;
-	float:left;
+	margin: 1em auto;
+	text-align: center;
 
 	
 }
-#cart-button{
-	
-	width:50px;
-	height:50px;
-	background:grey;
-	float:right;
-	margin-top:-10%;
-	
-}
-.nav-button{
+
+.nav-button {
 	text-decoration:none;
-	color:white;
+	display: inline-block;
+	text-align:center;
 	background:#bdb3a9;
 	border:white solid thin;
 	width:100%;
-	float:left;
-	text-align:center;
-	
-	
-	
+	height: 40px;
+
 }
+.nav-button a{
+	padding-top: 10px;
+	color: #fff;
+	text-decoration:none;
+	display: inline-block;
+	text-align:center;
+
+}
+
 .nav-button:hover{
 	color:#F8BEA2;
+	
+}
+
+#cart-button{
+	
+	width:50px;
+	height:40px;
+	background:grey;
+	float:right;
+	margin-top:-10%;
 	
 }
 
@@ -99,6 +109,7 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	height:70%;
 }
 #log-in-pop-up-close{
+	text-align: center;
 	background:#EDEDED;
 	width:100%;
 	height:12%;
@@ -110,6 +121,7 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	height:85%;
 }
 #sign-up-pop-up-close{
+	text-align: center;
 	background:#EDEDED;
 	width:100%;
 	height:10%;
@@ -126,11 +138,12 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	background:#CCC;
 	float:left;
 	margin-top:2px;
+	margin-bottom:10px;
 }
 
 
 
-.category{
+.category img{
 	width:48%;
 	height:200px;
 	background-color:#CCC;
@@ -146,25 +159,29 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	height:200px;
 	float:left;
 	background:#CCC;
-	border:grey solid thin;
+
 	
 	
 }
 .footer{
 	width:100%;
-	height:200px;
-	float:left;
+	height:210px;
+	float: left;
+	text-align: center;
 	margin-top:20px;
 	background:#F8BEA2;
 		
 }
 #footer-content{
 	width:100%;
+	padding-top: 15px;
+	display: inline-block;
 	
 }
 .social-media{
 	width:33%;
 	height:30px;
+	margin-top: 10px;
 	text-align:center;
 	background:grey;
 	float:left;
