--- a/css/tablet.css
+++ b/css/tablet.css
@@ -7,23 +7,15 @@
 	
 .main-nav{
 	width:85%;
-	float:left;
-	margin-left:8%;
+	margin: 1em auto;
+	text-align: center;
 	
 }
-#cart-button{
-	
-	width:50px;
-	height:50px;
-	background:grey;
-	margin-bottom:3%;
-	float:right;
-	
-}
+
 .nav-button{
 	text-decoration:none;
+	display:  inline-block;
 	color:#bdb3a9;
-	float:left;
 	text-align:center;
 	width:14%;
 
@@ -32,6 +24,17 @@
 }
 .nav-button:hover{
 	color:#F8BEA2;
+	cursor:pointer;
+	
+}
+
+#cart-button{
+	
+	width:50px;
+	height:40px;
+	background:grey;
+	margin-bottom:2%;
+	float:right;
 	
 }
 
@@ -70,8 +73,8 @@
 	overflow:hidden;
 	display:none;
 	-webkit-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
--moz-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
+	box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 }
 
 #sign-up-page{
@@ -84,8 +87,8 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	overflow:hidden;
 	display:none;
 	-webkit-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
--moz-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
+	 box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 }
 
 
@@ -95,6 +98,7 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	height:70%;
 }
 #log-in-pop-up-close{
+	text-align: center;
 	background:#EDEDED;
 	width:100%;
 	height:12%;
@@ -106,6 +110,7 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	height:85%;
 }
 #sign-up-pop-up-close{
+	text-align: center;
 	background:#EDEDED;
 	width:100%;
 	height:10%;
@@ -127,7 +132,7 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 	margin-bottom:10px;
 }
 
-.category{
+.category img{
 	width:48%;
 	height:330px;
 	background-color:#CCC;
@@ -141,9 +146,8 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 .event{
 	width:100%;
 	height:200px;
-	float:left;
 	background:#CCC;
-	border:grey solid thin;
+
 	
 	
 }
@@ -151,23 +155,24 @@ box-shadow: 0px -1px 23px -10px rgba(0,0,0,0.75);
 .footer{
 	width:100%;
 	height:150px;
-	float:left;
+	text-align:  center;
 	margin-top:20px;
 	background:#F8BEA2;
 		
 }
 #footer-content{
 	width:15%;
-	float:left;
+	padding-top: 60px; 
+	display:  inline-block;
 	
 }
 .social-media{
 	width:30px;
 	height:30px;
-	background:grey;
+	background: #CCC;
 	margin-left:10px;
 	margin-right:10px;
-	margin-top:10px;
+	margin-top:60px;
 	float:right;
 	
 	
